@@ -44,6 +44,7 @@
 	Fixed bug where adding parameter objects that had been independently constructed did not work right.
 	Changed internal class MySqlSingle to MySqlFloat
     Implemented new BIT data type						
+    Implemented Convert Zero DateTime connection option.							
 							
 1-20-05 - Version 1.0.4  
 
